--- a/build
+++ b/build
@@ -15,6 +15,6 @@ LIBRARY_NAME="libsbuf"
 
 for src_file in "src/"*.c ; do
 	src_file_basename="$(basename -s ".c" "$src_file")"
-	$CC -o "$BUILD_DIR/obj/$src_file_basename.o" -c "$src_file"
+	$CC -o "$BUILD_DIR/obj/$src_file_basename.o" -c "$src_file" || exit
 done
 $AR -c "$BUILD_DIR/lib/$LIBRARY_NAME.a" "$BUILD_DIR/obj/"*.o
